<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_post_24dp"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_member_black"
        android:title="@string/title_member" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_my_page"
        android:icon="@drawable/ic_mypage"
        android:title="@string/title_my_info" />

</menu>