<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.seven.colink.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.seven.colink.ui.search.SearchFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.seven.colink.ui.group.GroupFragment"
        android:label="@string/title_member"
        tools:layout="@layout/fragment_group" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.seven.colink.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.seven.colink.ui.mypage.MyPageFragment"
        android:label="@string/title_member"
        tools:layout="@layout/fragment_my_page" />
</navigation>