<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_search_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/al_search_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_search_filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_regular"
                            android:text="@string/search_filter"
                            android:textColor="@color/typo_color"
                            android:layout_marginEnd="8dp"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_search_project"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_bold"
                            android:text="@string/search_filter_project"
                            android:textColor="@color/typo_color"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="4dp"
                            android:background="@color/typo_color" />

                        <TextView
                            android:id="@+id/tv_search_study"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_bold"
                            android:text="@string/search_filter_study"
                            android:textColor="@color/typo_color"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="4dp"
                            android:background="@color/typo_color" />

                        <TextView
                            android:id="@+id/tv_search_recruitEnd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_bold"
                            android:text="@string/search_filter_end"
                            android:textColor="@color/typo_color"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="4dp"
                            android:background="@color/typo_color" />

                        <TextView
                            android:id="@+id/tv_search_recruit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_bold"
                            android:text="@string/search_filter_recruit"
                            android:textColor="@color/typo_color"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_round_corner_4dp_green"
                        android:orientation="horizontal"
                        android:paddingEnd="4dp">

                        <EditText
                            android:id="@+id/et_search_search"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="start|center_vertical"
                            android:layout_weight="1"
                            android:background="@null"
                            android:ellipsize="end"
                            android:fontFamily="@font/inter_medium"
                            android:hint="@string/search_edittext"
                            android:maxLines="1"
                            android:inputType="text"
                            android:imeOptions="actionDone"
                            android:paddingStart="12dp"
                            android:textColor="@color/typo_color"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/iv_search_button"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_gravity="end|center_vertical"
                            android:layout_margin="8dp"
                            android:src="@drawable/ic_search" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_search_post"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/main_color"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_edit"
        android:visibility="visible"
        app:fabCustomSize="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/sub_color" />

</androidx.constraintlayout.widget.ConstraintLayout>